# LD57

./: .gitignore  CMakeLists.txt  LICENSE
LD57/: CMakeLists.txt
lib/glad/: CMakeLists.txt  glad.c  glad.h
lib/glfw/: CMakeLists.txt
lib/miniaudio/: miniaudio.h
src/: main.cpp  main.hpp
src/Rendering/: Renderer.cpp  Renderer.hpp  RenderingData.hpp  ShaderBuilder.hpp
